# bdp-image-classifier

./: .commons.sh  .gitignore  BENCHMARK.md  README.md
app/: README.md  assembly-x64.jar.REMOVED.git-id  assembly.sh  download-x64.sh  download.sh  install-env-usr.sh  install-env.sh  install-sbt.sh  install-spark.sh  package.sh  run-usr.sh  run.sh  setup_ssh.sh  uninstall-env-usr.sh  uninstall-env.sh  uninstall-sbt.sh  uninstall-spark.sh
app/image-classifier/: build.sbt  ciao.REMOVED.git-id
app/image-classifier/project/: plugins.sbt
app/image-classifier/src/main/scala/image_classifier/configuration/: Config.scala  Enums.scala  Loader.scala  Utils.scala
app/image-classifier/src/main/scala/image_classifier/launch/: Launcher.scala  Main.scala
app/image-classifier/src/main/scala/image_classifier/pipeline/: Columns.scala  Pipeline.scala  Stage.scala
app/image-classifier/src/main/scala/image_classifier/utils/: DataFrameImplicits.scala  DataTypeImplicits.scala  FileUtils.scala  OptionImplicits.scala  (+2 more)
app/tools/: install-env-usr.sh  install-env.sh  package.sh  run-usr.sh  run.sh  uninstall-env-usr.sh  uninstall-env.sh
cloud/: .commons.sh  .configuration.json  .job.sh  .job.sh.template  .key.pem  README.md  run-s3.sh  run-ssh.sh  run.sh
data/: config.json.template  download.sh  install-kaggle.sh  uninstall-kaggle.sh
data/supermarket/: config.json.template  download.sh
datasets/: .commons.sh  README.md
datasets/indoor/: .config-emr.json.template  .config.json.template  config.json.template  download.sh
datasets/land/: .config-emr.json.template  .config.json.template  config.json.template  download.sh
datasets/natural/: config.json.template  download.sh
datasets/supermarket/: .config-emr.json.template  .config.json.template  config.json.template  download.sh
datasets/test/: .config.json.template  download.sh
debug-env/: .run.sh.template  .uninstall.sh.template  README.md  install.sh  run.sh  setup-ssh.sh  uninstall.sh
debugenv/: install-env.sh  run.sh  setup_ssh.sh
driver/: install-sbt.sh  install.sh  uninstall-sbt.sh  uninstall.sh
driver/app/image-classifier/: build.sbt
driver/app/image-classifier/project/: plugins.sbt
driver/app/image-classifier/src/main/scala/: BOVW.scala  DescriptorFactory.scala  InputClass.scala  InputConfiguration.scala  Main.scala
terraform-emr/: README.md  main.tf
tools/: DATASETS.md  EXAMPLE_EMR.md  EXAMPLE_LOCAL.md  MANIFEST.in  README.md  setup.cfg  utils.py
tools/app/: assembly.py  download.py
tools/bdp_image_classifier/app/: assembly.py  download.py
tools/bdp_image_classifier/datasets/: dataset_utils.py  download.py  reconfigure.py
tools/bdp_image_classifier/datasets/download/: indoor.py
tools/bdp_image_classifier/datasets/downloaders/: indoor-config.json.resource  indoor.py  land-config.json.resource  land.py  supermarket-config.json.resource  supermarket.py  test-config.json.resource  test.py
tools/bdp_image_classifier/debug_env/: env.sh.resource  env_utils.py  install.py  log4j.properties.resource  run.py  uninstall.py
tools/bdp_image_classifier/emr/: emr-configuration.json.resource  emr_utils.py  job-s3.sh.resource  job.sh.resource  run.py  run_test.py  test-config-gen.sh.resource
tools/bdp_image_classifier/utils/: cli.py  files.py
tools/datasets/: dataset_utils.py  reconfigure.py
tools/datasets/download/: indoor.py  land.py  supermarket.py  test.py
tools/debug-env/: .core-site.xml.template  .env.sh.template  .hdfs-site.xml.template  .lo4j.properties.template  env_utils.py  install.py  uninstall.py
tools/debug_env/: .core-site.xml.template  .env.sh.template  .hdfs-site.xml.template  env_utils.py  install.py  run.py  uninstall.py
tools/fz_bdp_ic/app/: assembly.py
tools/fz_bdp_ic/datasets/: dataset_utils.py
tools/fz_bdp_ic/datasets/download/: .land-config.json.template  indoor.py  land.py  supermarket.py  test.py
tools/fz_bdp_ic/debug_env/: env_utils.py  install.py  run.py
tools/fz_bdp_ic/emr/: emr_utils.py  run_test.py
tools/fz_bdp_ic/utils/: cli.py  files.py  launcher.py
tools/utils/: args.py  cli.py  cliargs.py  exceptions.py  files.py  launcher.py
(+108 files in other folders)
