[metadata]
name = bdp-image-classifier
description = Tools for https://github.com/francescozoccheddu/bdp-image-classifier
long_description = file: README.md
author = Francesco Zoccheddu
url = https://github.com/francescozoccheddu/bdp-image-classifier
version = 0.1

[options]
packages = find_namespace:
include_package_data = True
python_requires = >=3.5
install_requires =
    requests

[options.entry_points]
console_scripts =
    bdp-ic-app-download = bdp_image_classifier.app.download:_main
    bdp-ic-app-assembly = bdp_image_classifier.app.assembly:_main
    bdp-ic-emr-run = bdp_image_classifier.emr.run:_main
    bdp-ic-emr-run-test = bdp_image_classifier.emr.run_test:_main
    bdp-ic-datasets-reconfigure = bdp_image_classifier.datasets.reconfigure:_main
    bdp-ic-datasets-download-test = bdp_image_classifier.datasets.download.test:_main [datasets]
    bdp-ic-datasets-download-supermarket = bdp_image_classifier.datasets.download.supermarket:_main [datasets]
    bdp-ic-datasets-download-land = bdp_image_classifier.datasets.download.land:_main [datasets]
    bdp-ic-datasets-download-indoor = bdp_image_classifier.datasets.download.indoor:_main [datasets]
    bdp-ic-debug-env-install = bdp_image_classifier.debug_env.install:_main [debug-env]
    bdp-ic-debug-env-uninstall = bdp_image_classifier.debug_env.uninstall:_main [debug-env]
    bdp-ic-debug-env-test = bdp_image_classifier.debug_env.run:_main [debug-env]

[options.package_data]
* = *.resource

[options.extras_require]
emr = boto3
datasets = kaggle
debug-env = cryptography